Добавил негативный тесты и на апдейт юзера. Ридми. Модели. Спеки и всё такое.